# yarp-device-xsensmt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ci_env.yml
.github/workflows/: conda-forge-ci.yml
xsensmt/: CMakeLists.txt  XsensMT.cpp  XsensMT.h  exampleScanDevicesAndReceiveData.cpp  xsensmt.ini
